--- a/app/src/main/res/layout/fragment_placementdashboard.xml
+++ b/app/src/main/res/layout/fragment_placementdashboard.xml
@@ -4,16 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.slideshow.SlideshowFragment">
+    tools:context=".fragments.PlacementDashboardFragment">
 
     <TextView
-        android:id="@+id/text_slideshow"
+        android:id="@+id/text_placementDashboard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:text="Slideshow Fragment"
+        android:text="Placement Dashboard"
         android:textAlignment="center"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
