--- a/app/src/main/res/layout/fragment_viewstudents.xml
+++ b/app/src/main/res/layout/fragment_viewstudents.xml
@@ -4,16 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.home.HomeFragment">
+    tools:context=".fragments.admin.ViewStudentsFragment">
 
     <TextView
-        android:id="@+id/text_home"
+        android:id="@+id/text_viewstudents"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:text="Home Fragment"
+        android:text="View Students Fragment"
         android:textAlignment="center"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
