--- a/app/src/main/res/layout/fragment_viewtpos.xml
+++ b/app/src/main/res/layout/fragment_viewtpos.xml
@@ -6,18 +6,28 @@
     android:layout_height="match_parent"
     tools:context=".fragments.admin.ViewTPOFragment">
 
-    <TextView
-        android:id="@+id/text_viewtpos"
-        android:layout_width="match_parent"
+    <ProgressBar
+        android:id="@+id/loadingBar"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:text="View TPOs Fragment"
-        android:textAlignment="center"
-        android:textSize="20sp"
+        android:layout_gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/viewtpo_recycler_view" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/viewtpo_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
+
+    </androidx.recyclerview.widget.RecyclerView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
