almost finished admin module

--- a/app/src/main/res/layout/fragment_addstudent.xml
+++ b/app/src/main/res/layout/fragment_addstudent.xml
@@ -37,7 +37,9 @@
         android:hint="@string/prompt_studentId"
         android:inputType="text"
         android:selectAllOnFocus="true"
+        app:layout_constraintBottom_toTopOf="@+id/addStudentName"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.531"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
@@ -46,28 +48,60 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="14dp"
         android:layout_marginEnd="24dp"
         android:hint="@string/prompt_studentName"
         android:inputType="text"
         android:selectAllOnFocus="true"
+        app:layout_constraintBottom_toTopOf="@+id/addStudentBranch"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.531"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/addStudentId" />
+
+    <EditText
+        android:id="@+id/addStudentBranch"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="9dp"
+        android:layout_marginEnd="24dp"
+        android:hint="@string/prompt_studentBranch"
+        android:inputType="text"
+        app:layout_constraintBottom_toTopOf="@+id/addStudentPercentage"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/addStudentName" />
+
+    <EditText
+        android:id="@+id/addStudentPercentage"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="7dp"
+        android:layout_marginEnd="24dp"
+        android:hint="@string/prompt_studentPercentage"
+        android:inputType="text"
+        app:layout_constraintBottom_toTopOf="@+id/password"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.781"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/addStudentBranch" />
 
     <EditText
         android:id="@+id/password"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="24dp"
+        android:layout_marginBottom="172dp"
         android:hint="@string/default_password_hint"
         android:inputType="textPassword"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addStudentName" />
+        app:layout_constraintTop_toBottomOf="@+id/addStudentPercentage" />
 
     <Button
         android:id="@+id/action_student_reset"
