--- a/app/src/main/res/layout/fragment_viewstudents.xml
+++ b/app/src/main/res/layout/fragment_viewstudents.xml
@@ -4,20 +4,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.admin.ViewStudentsFragment">
+    tools:context=".fragments.admin.ViewStudentsFragment"
+    android:background="@drawable/background">
 
-    <TextView
-        android:id="@+id/text_viewstudents"
-        android:layout_width="match_parent"
+    <ProgressBar
+        android:id="@+id/loadingBar1"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:text="View Students Fragment"
-        android:textAlignment="center"
-        android:textSize="20sp"
+        android:layout_gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/viewstudents_recycler_view" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/viewstudents_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
+
+    </androidx.recyclerview.widget.RecyclerView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
