--- a/app/src/main/res/layout/fragment_viewtpos.xml
+++ b/app/src/main/res/layout/fragment_viewtpos.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.admin.ViewTPOFragment">
+    tools:context=".fragments.admin.ViewTPOFragment"
+    android:background="@drawable/background">
 
     <ProgressBar
         android:id="@+id/loadingBar"
