--- a/app/src/main/res/layout/layout_tpo_card.xml
+++ b/app/src/main/res/layout/layout_tpo_card.xml
@@ -9,10 +9,10 @@
     android:layout_marginTop="12dp"
     android:layout_marginRight="16dp"
     android:clickable="true"
-    card_view:cardBackgroundColor="#00FFFF"
     card_view:cardCornerRadius="12dp"
+    card_view:cardPreventCornerOverlap="false"
     card_view:contentPadding="10dp"
-    tools:context=".fragments.admin.RecyclerViewAdapter">
+    tools:context=".fragments.admin.RecyclerViewAdapterTPO">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -25,6 +25,7 @@
             android:fontFamily="sans-serif-black"
             android:gravity="top"
             android:text="TPO Name: "
+            android:textColor="#FFFFFF"
             android:textSize="16dp"
             card_view:layout_constraintBottom_toBottomOf="parent"
             card_view:layout_constraintEnd_toEndOf="parent"
@@ -40,6 +41,7 @@
             android:layout_marginStart="72dp"
             android:fontFamily="sans-serif-black"
             android:gravity="end|center_vertical"
+            android:textColor="#FFFFFF"
             android:textSize="16dp"
             card_view:layout_constraintBottom_toBottomOf="parent"
             card_view:layout_constraintEnd_toEndOf="parent"
@@ -55,6 +57,7 @@
             android:layout_marginTop="5dp"
             android:fontFamily="sans-serif-black"
             android:text="TPO ID: "
+            android:textColor="#FFFFFF"
             android:textSize="16dp"
             card_view:layout_constraintBottom_toTopOf="@+id/tponameview"
             card_view:layout_constraintEnd_toEndOf="parent"
@@ -69,6 +72,7 @@
             android:layout_height="20dp"
             android:fontFamily="sans-serif-black"
             android:gravity="end|center_vertical"
+            android:textColor="#FFFFFF"
             android:textSize="16dp"
             card_view:layout_constraintBottom_toBottomOf="parent"
             card_view:layout_constraintEnd_toEndOf="parent"
@@ -77,6 +81,7 @@
             card_view:layout_constraintTop_toTopOf="parent"
             card_view:layout_constraintVertical_bias="0.228" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </androidx.cardview.widget.CardView>
 
