--- a/app/src/main/res/layout/fragment_addcompany.xml
+++ b/app/src/main/res/layout/fragment_addcompany.xml
@@ -12,17 +12,19 @@
 
         <EditText
             android:id="@+id/companyname"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="35dp"
             android:layout_marginTop="228dp"
+            android:layout_marginRight="35dp"
             android:layout_marginBottom="44dp"
             android:ems="10"
             android:hint="Enter Company Name"
             android:inputType="textPersonName"
             app:layout_constraintBottom_toTopOf="@+id/companydescription"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.189"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/companydescription"
+            app:layout_constraintHorizontal_bias="0.8"
+            app:layout_constraintStart_toStartOf="@+id/companydescription"
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
@@ -106,17 +108,20 @@
 
         <EditText
             android:id="@+id/companyid"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="35dp"
+            android:layout_marginRight="35dp"
+            android:layout_marginBottom="40dp"
             android:ems="10"
             android:hint="Enter Company ID"
             android:inputType="textPersonName"
             app:layout_constraintBottom_toTopOf="@+id/companyname"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.189"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/companyname"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/companyname"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.516" />
+            app:layout_constraintVertical_bias="1.0" />
 
         <ProgressBar
             android:id="@+id/loadingBar"
