--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -43,6 +43,11 @@
             android:title="Add Company" />
 
         <item
+            android:id="@+id/tpo_viewCompany"
+            android:icon="@drawable/ic_menu_gallery"
+            android:title="View Company" />
+
+        <item
             android:id="@+id/tpo_addNotifications"
             android:icon="@drawable/ic_menu_camera"
             android:title="Add Notifications" />
