--- a/app/src/main/res/layout/layout_viewcompany_card.xml
+++ b/app/src/main/res/layout/layout_viewcompany_card.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_viewcompany"
     android:layout_width="match_parent"
-    android:layout_height="150dp"
+    android:layout_height="125dp"
     android:layout_marginLeft="16dp"
     android:layout_marginTop="12dp"
     android:stateListAnimator="@anim/animation"
@@ -22,12 +22,12 @@
 
         <TextView
             android:id="@+id/companynameview"
-            android:layout_width="282dp"
-            android:layout_height="70dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:textAlignment="center"
             android:textAllCaps="true"
             android:textColor="#FFFFFF"
-            android:textSize="45sp"
+            android:textSize="30sp"
             android:textStyle="bold"
             card_view:layout_constraintBottom_toBottomOf="parent"
             card_view:layout_constraintEnd_toEndOf="parent"
