--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,13 +11,15 @@
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="354dp"
+        android:layout_height="369dp"
         android:layout_marginBottom="1dp"
+        android:scaleType="fitStart"
         app:layout_constraintBottom_toTopOf="@+id/username"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/userimage" />
+        app:srcCompat="@drawable/appwithoutbackground" />
 
     <EditText
         android:id="@+id/username"
@@ -26,17 +28,19 @@
         android:layout_below="@id/logo"
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="30dp"
+        android:layout_marginTop="68dp"
         android:layout_marginRight="30dp"
+        android:layout_marginBottom="112dp"
         android:drawableStart="@drawable/ic_baseline_account_circle_24"
         android:drawablePadding="20dp"
         android:ems="10"
         android:hint="Enter Username"
         android:textSize="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/password"
+        app:layout_constraintBottom_toTopOf="@+id/login"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.733"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logo"
-        app:layout_constraintVertical_bias="0.50" />
+        app:layout_constraintTop_toBottomOf="@+id/logo" />
 
     <EditText
         android:id="@+id/password"
@@ -54,8 +58,10 @@
         android:textSize="20dp"
         app:layout_constraintBottom_toTopOf="@+id/login"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.533"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/username" />
+        app:layout_constraintTop_toBottomOf="@id/username"
+        app:layout_constraintVertical_bias="0.453" />
 
     <Button
         android:id="@+id/login"
@@ -75,7 +81,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/password" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.888" />
 
     <ProgressBar
         android:id="@+id/loginProgressBar"
@@ -87,9 +94,12 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="288dp"
+        android:layout_marginTop="308dp"
+        android:layout_marginBottom="218dp"
         android:minHeight="500dp"
+        app:layout_constraintBottom_toTopOf="@+id/login"
         app:layout_constraintEnd_toEndOf="@+id/username"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="@+id/username"
         app:layout_constraintTop_toTopOf="@+id/logo" />
 
