--- a/app/src/main/res/layout/fragment_addpapers.xml
+++ b/app/src/main/res/layout/fragment_addpapers.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@drawable/background"
+    android:background="@drawable/splash"
     android:layout_height="match_parent"
     tools:context=".fragments.tpo.tpo.AddPapers">
 
@@ -31,6 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:text="No file selected"
+        android:textColor="@android:color/white"
         android:textAlignment="center"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
         app:layout_constraintBottom_toTopOf="@+id/viewUploads"
