--- a/app/src/main/res/layout/fragment_addcompany.xml
+++ b/app/src/main/res/layout/fragment_addcompany.xml
@@ -4,133 +4,147 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragments.tpo.tpo.AddCompanyFragment">
+    tools:context=".fragments.tpo.tpo.AddCompanyFragment"
+    android:background="@drawable/splash">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        >
+        <ImageView
+            android:id="@+id/logoo"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/appwithoutbackground"
+            />
+        <EditText
+            android:id="@+id/companyid"
+            android:layout_below="@+id/logoo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/rounded_corners"
+            android:backgroundTint="#2B2468"
+            android:hint="Enter Company ID"
+            android:inputType="textPersonName"
+            android:paddingLeft="10dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:layout_marginLeft="20dp"
+            android:layout_centerHorizontal="true"
+            android:textColorHint="#FFFFFF"
+            />
 
         <EditText
             android:id="@+id/companyname"
+            android:layout_below="@+id/companyid"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="35dp"
-            android:layout_marginTop="228dp"
-            android:layout_marginRight="35dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginLeft="20dp"
             android:layout_marginBottom="44dp"
-            android:ems="10"
+            android:background="@drawable/rounded_corners"
+            android:backgroundTint="#2B2468"
+            android:width="200dp"
+            android:textColorHint="#FFFFFF"
             android:hint="Enter Company Name"
             android:inputType="textPersonName"
-            app:layout_constraintBottom_toTopOf="@+id/companydescription"
-            app:layout_constraintEnd_toEndOf="@+id/companydescription"
-            app:layout_constraintHorizontal_bias="0.8"
-            app:layout_constraintStart_toStartOf="@+id/companydescription"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:paddingLeft="10dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:layout_centerHorizontal="true"
+            />
 
         <EditText
             android:id="@+id/companydescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="39dp"
-            android:layout_marginRight="30dp"
-            android:layout_marginBottom="353dp"
-            android:background="#FF0000"
-            android:ems="10"
+            android:layout_below="@+id/companyname"
+            android:textColorHint="#FFFFFF"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/rounded_corners"
+            android:backgroundTint="#2B2468"
             android:gravity="start|top"
             android:hint="Enter Company Description"
             android:inputType="textMultiLine"
-            android:lines="5"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.033"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/companyname" />
+            android:lines="4"
+            android:paddingLeft="10dp"
+            android:paddingTop="10dp"
+            android:layout_centerHorizontal="true"
+            />
 
         <EditText
             android:id="@+id/companyskills"
-            android:layout_width="wrap_content"
+            android:layout_below="@+id/companydescription"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="56dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginLeft="20dp"
             android:layout_marginBottom="148dp"
-            android:ems="10"
+            android:background="@drawable/rounded_corners"
+            android:backgroundTint="#2B2468"
+            android:textColorHint="#FFFFFF"
             android:hint="Enter Eligibilty Criteria"
             android:inputType="textPersonName"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.328"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/companyeligibility" />
+            android:paddingLeft="10dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:layout_centerHorizontal="true"
+            />
 
         <EditText
             android:id="@+id/companyeligibility"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="26dp"
-            android:ems="10"
+            android:layout_marginTop="150dp"
+            android:layout_marginLeft="20dp"
+            android:background="@drawable/rounded_corners"
+            android:backgroundTint="#2B2468"
+            android:layout_below="@+id/companydescription"
+            android:width="200dp"
             android:hint="Enter Skills Required"
             android:inputType="textPersonName"
-            app:layout_constraintBottom_toTopOf="@+id/companyskills"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.328"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/companydescription"
-            app:layout_constraintVertical_bias="0.072" />
+            android:textColorHint="#FFFFFF"
+            android:paddingLeft="10dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:layout_centerHorizontal="true"
+            />
 
         <Button
             android:id="@+id/action_add_company"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="56dp"
-            android:layout_marginTop="45dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="40dp"
+            android:width="125dp"
             android:layout_marginBottom="56dp"
             android:background="@drawable/rounded_corners"
             android:text="Add Company"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/action_reset"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/companyskills"
-            app:layout_constraintVertical_bias="1.0" />
+            android:layout_below="@+id/companyeligibility"
+            />
 
         <Button
             android:id="@+id/action_reset"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="72dp"
-            android:layout_marginTop="45dp"
+            android:layout_marginLeft="250dp"
+            android:layout_marginTop="40dp"
+            android:width="125dp"
             android:layout_marginBottom="56dp"
             android:background="@drawable/rounded_corners"
-            android:text="reset"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/action_add_company"
-            app:layout_constraintTop_toBottomOf="@+id/companyskills" />
+            android:text="RESET"
+            android:layout_below="@+id/companyeligibility"
+            />
 
-        <EditText
-            android:id="@+id/companyid"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="35dp"
-            android:layout_marginRight="35dp"
-            android:layout_marginBottom="40dp"
-            android:ems="10"
-            android:hint="Enter Company ID"
-            android:inputType="textPersonName"
-            app:layout_constraintBottom_toTopOf="@+id/companyname"
-            app:layout_constraintEnd_toEndOf="@+id/companyname"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/companyname"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0" />
+
 
         <ProgressBar
             android:id="@+id/loadingBar"
             style="?android:attr/progressBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:layout_centerInParent="true" />
+    </RelativeLayout>
 </androidx.core.widget.NestedScrollView>
