--- a/app/src/main/res/layout/fragment_addtpo.xml
+++ b/app/src/main/res/layout/fragment_addtpo.xml
@@ -1,124 +1,143 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@drawable/splash"
     android:paddingLeft="@dimen/fragment_horizontal_margin"
     android:paddingTop="@dimen/fragment_vertical_margin"
     android:paddingRight="@dimen/fragment_horizontal_margin"
     android:paddingBottom="@dimen/fragment_vertical_margin"
     tools:context=".fragments.admin.AddTPOFragment">
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="116dp"
-        android:layout_height="122dp"
-        android:layout_marginTop="60dp"
-        android:minWidth="30dp"
-        android:minHeight="30dp"
-        android:src="@drawable/ic_launcher_foreground"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.025" />
+        android:layout_width="190dp"
+        android:layout_height="142dp"
+        android:src="@drawable/appwithoutbackground"
+        android:layout_centerHorizontal="true"/>
 
-    <EditText
-        android:id="@+id/addTpoId"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginEnd="25dp"
-        android:hint="@string/prompt_tpoId"
-        android:inputType="text"
-        android:selectAllOnFocus="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
+        android:layout_below="@+id/imageView2"
+        android:layout_width="match_parent"
+        android:layout_height="450dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        app:cardBackgroundColor="#010523"
+        app:cardCornerRadius="10dp">
 
-    <EditText
-        android:id="@+id/addTpoName"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="24dp"
-        android:hint="@string/prompt_tpoName"
-        android:inputType="text"
-        android:selectAllOnFocus="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addTpoId" />
+        <TextView
+            android:id="@+id/tpo_textv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="60dp"
+            android:text="TPO ID"
+            android:textColor="#FFFFFF"
+            android:textSize="19sp" />
 
-    <EditText
-        android:id="@+id/password"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="24dp"
-        android:hint="@string/default_password_hint"
-        android:inputType="textPassword"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addTpoName" />
+        <EditText
 
-    <Button
-        android:id="@+id/action_tpo_reset"
-        android:layout_width="wrap_content"
+            android:id="@+id/addTpoId"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:hint="ENTER TPO ID"
+            android:textColor="#FFFFFF"
+            android:textColorHint="#FFFFFF"
+            android:layout_marginTop="60dp"
+            android:textSize="19sp"
+            android:layout_marginLeft="150dp"
+            android:background="@drawable/rounded_corners"
+            android:backgroundTint="#2B2468"
+            android:paddingLeft="10dp"
+            />
+
+        <TextView
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="130dp"
+            android:text="TPO NAME"
+
+            android:textColor="#FFFFFF"
+            android:textSize="19sp" />
+
+        <EditText
+            android:id="@+id/addTpoName"
+
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:hint="ENTER TPO NAME"
+            android:textColor="#FFFFFF"
+            android:textColorHint="#FFFFFF"
+            android:layout_marginTop="130dp"
+            android:textSize="19sp"
+            android:layout_marginLeft="150dp"
+            android:background="@drawable/rounded_corners"
+            android:backgroundTint="#2B2468"
+            android:paddingLeft="10dp"
+            />
+        <TextView
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="200dp"
+            android:text="PASSWORD"
+
+            android:textColor="#FFFFFF"
+            android:textSize="19sp" />
+
+        <EditText
+            android:id="@+id/password"
+
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:hint="ENTER  PASSWORD"
+            android:textColor="#FFFFFF"
+            android:textColorHint="#FFFFFF"
+            android:layout_marginTop="200dp"
+            android:textSize="19sp"
+            android:layout_marginLeft="150dp"
+            android:background="@drawable/rounded_corners"
+            android:backgroundTint="#2B2468"
+            android:paddingLeft="10dp"
+            />
+
+        <Button
+            android:id="@+id/action_tpo_reset"
+
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="start"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="48dp"
-        android:layout_marginBottom="64dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
         android:background="@drawable/rounded_corners"
-        android:text="@string/action_reset"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password"
-        app:layout_constraintVertical_bias="0.064" />
+        android:text="RESET"
+        android:layout_marginTop="270dp"
+        />
+        <Button
+            android:id="@+id/action_tpo_add"
 
-    <Button
-        android:id="@+id/action_tpo_add"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="start"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="48dp"
-        android:layout_marginBottom="64dp"
-        android:background="@drawable/rounded_corners"
-        android:text="@string/action_add_tpo"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintLeft_toRightOf="@id/action_tpo_reset"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password"
-        app:layout_constraintVertical_bias="0.061" />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
+            android:background="@drawable/rounded_corners"
+            android:text="ADD TPO"
+            android:layout_marginTop="340dp"
+            />
 
-    <ProgressBar
-        android:id="@+id/loading"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="64dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="64dp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/password"
-        app:layout_constraintStart_toStartOf="@+id/password"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.3" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
+    </ScrollView>
+
+</RelativeLayout>
